# FTP_Server

./: app.py  pyproject.toml  requirements.txt
.github/workflows/: all-build.yml
classes/: __init__.py  controls.py  functions.py  setting.py
