[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ftp-server"
version = "0.1.0"
description = "FTP Server built with Flet"
requires-python = ">=3.12"
dependencies = ["flet", "pyftpdlib"]

[tool.flit.metadata]
module = "main"
authors = [{name = "Your Name", email = "your.email@example.com"}]

[tool.flet]
source_packages = ["pyftpdlib"]
